# avataa-hierarchy

./: .env.example  README.md  compose.yaml  pyproject.toml  pytest.ini  ruff.toml
app/: alembic.ini  database.py  init_app.py  main.py  models.py  request.py  run_grpc.py  settings.py  sync_database.py
app/common_utils/: creator.py  elastic_client.py  hierarchy_builder.py  hierarchy_filter.py  node.py  node_manipulator.py  notifier.py
app/elastic/: settings.py  utils.py
app/grpc_config/: inventory_utils.py
app/grpc_config/search/: client.py  settings.py
app/grpc_server/: getter_example.py  main_grpc_server.py
app/grpc_server/protobuf/: severity.proto  (+3 more)
app/kafka_config/: config.py  database.py  protobuf_consumer.py  utils.py
app/kafka_producer/: config.py  model_mediator.py  producer.py
app/migrations/: env.py
app/routers/: hierarchy_object_router.py  hierarchy_router.py  level_router.py  utility_checks.py  utils.py
app/schemas/: enum_models.py  hier_schemas.py  invetory_schemas.py  main_base_connector.py
tests/: conftest.py  settings.py
tests/kafka_tests/: test_adapter_function.py  test_inventory_TMO.py  test_inventory_TPRM.py  test_mo_batch_changes_handler.py  test_prm_batch_changes_handler.py  test_utils.py
tests/models/: test_hierarchy.py  test_level.py  test_obj.py
tests/routers/: test_private_router_hierarchy.py  test_private_router_level.py  test_public_router_hierarchy.py  test_public_router_level.py  test_utility_checks.py
tests/utils/: test_hierarchy_builder.py  test_hierarchy_filter_case_1.py  test_hierarchy_filter_case_2.py
(+87 files in other folders)
